--- a/style.css
+++ b/style.css
@@ -1,47 +1,3 @@
-/* .body{
-  background-image: linear-gradient(rgb(255, 255, 255), rgb(214, 214, 214));
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-header{
-  background-color: #333;
-    color: #fff;
-    padding: 20px;
-}
-
-nav ul{
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  margin-inline-end: auto;
-}
-
-nav ul li{
-  margin-right: 20px;
-}
-
-
-section{
-  display: flex;
-  
-}
-
-section .EU{
-  position: absolute;
-  display: block;
-  margin-right: 20px;
-
-}
-
-section img{
-  width: 100px;
-  height: 100px;
-  border-radius: 80px;
-  margin-top: 50px;
-}
-
- */
 
  /* Estilos generales */
 body {
@@ -67,9 +23,24 @@ header img{
   height: 50px;
   margin-top: 5px;
   margin-left: 85px;
+  transition: transform 0.3s;
 }
 
+header img:hover{
+  transform: scale(1.1);
+}
 
+header .avatar{
+  width: 50px;
+  border-radius: 50px;
+  margin-right: 15px;
+  transition: transform 0.3s;
+}
+
+header .avatar:hover{
+  transform: scale(1.1);
+
+}
 
 nav ul {
   list-style-type: none;
